fix: update bg style

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ button {
 
 .mi-home-page {
     height: 100vh;
-    background: url("./assets/img/bg.jpg") no-repeat center 100%;
+    background: url("./assets/img/bg.jpg") no-repeat center / 100% 100%;
 
     .home-content {
         padding: 20px;
